style: mass-fix checkstyle violations and apply IDE suggestions